tests/ui/cross/cross-crate-macro-backtrace/main.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/auxiliary/extern_macro_crate.rs:12:30
   |
LL | macro_rules! myprintln {
   | ---------------------- in this expansion of `myprintln!` (#1)
LL |     ($fmt:expr) => (myprint!(concat!($fmt, "\n")));
   |                              ^^^^^^^^^^^^^^^^^^^ in this macro invocation (#2)
   |
  ::: $DIR/main.rs:6:5
   |
LL |     myprintln!("{}");
   |     ---------------- in this macro invocation (#1)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `concat!` (#2)

error: aborting due to previous error

